--- a/tmt-calc.html
+++ b/tmt-calc.html
@@ -21,7 +21,7 @@
 	<div class="container">
 		<div class="py-5 text-center">
 
-			<h2>Trial Making Test Norm Calculator</h2>
+			<h2>Trail Making Test Norm Calculator</h2>
 
 		</div>
 
@@ -32,13 +32,13 @@
 				<div class="form-group row">
 					<label for="age1" class="col-sm-3 col-form-label">Age</label>
 					<div class="col-sm-5">
-						<input type="number" class="form-control  tmt" id="age" min="40" max="80" placeholder="40 - 80 years" required/>
+						<input type="number" class="form-control  tmt" id="age" min="40" max="80" placeholder="41 - 84 years" required/>
 	  			</div>
 				</div>
 				<div class="form-group row">
 					<label for="years1" class="col-sm-3 col-form-label">Years of education</label>
 					<div class="col-sm-5">
-						<input type="number" class="form-control tmt" id="edu" min="7" max="23" placeholder="7 - 23 years" required>
+						<input type="number" class="form-control tmt" id="edu" min="7" max="24" placeholder="7 - 24 years" required>
 	  			</div>
 				</div>
 
