--- a/tmt-calc.html
+++ b/tmt-calc.html
@@ -14,6 +14,9 @@
 		#cerad{
 			margin-top: 50px;
 		}
+		@media(max-width:576px) {
+		    body{font-size: 10px;}
+		}
 	</style>
 </head>
 
@@ -30,97 +33,99 @@
 
 				<!-- Demographics -->
 				<div class="form-group row">
-					<label for="age1" class="col-sm-3 col-form-label">Age</label>
-					<div class="col-sm-5">
-						<input type="number" class="form-control  tmt" id="age" min="40" max="80" placeholder="41 - 84 years" required/>
+					<label for="age1" class="col-sm-3 col-7 col-form-label">Age</label>
+					<div class="col-sm-5 col-5">
+						<input type="number" class="form-control  tmt" id="age" min="40" max="80" placeholder="41 - 84" required/>
 	  			</div>
 				</div>
 				<div class="form-group row">
-					<label for="years1" class="col-sm-3 col-form-label">Years of education</label>
-					<div class="col-sm-5">
-						<input type="number" class="form-control tmt" id="edu" min="7" max="24" placeholder="7 - 24 years" required>
+					<label for="years1" class="col-sm-3 col-7 col-form-label">Years of education</label>
+					<div class="col-sm-5 col-5">
+						<input type="number" class="form-control tmt" id="edu" min="7" max="24" placeholder="7 - 24" required>
 	  			</div>
 				</div>
 
 				<!-- TMT VALUES -->
-				<div id="tmt">
 
-					<!-- Header -->
+
+					<!-- Header d-none d-sm-block -->
 					<div class="form-group row">
-						<div class="col-sm-2">
+						<div class="col-sm-2 col-3">
+
 						</div>
-						<label for="raw-score-a" class="col-sm-2 col-form-label">Raw score</label>
-						<label for="raw-score-a" class="col-sm-2 col-form-label">T-Score</label>
-						<label for="raw-score-a" class="col-sm-2 col-form-label">T-Score (age only)</label>
-
+						<label for="raw-score-a" class="col-sm-2 col-3 col-form-label">Raw score</label>
+						<label for="raw-score-a" class="col-sm-2 col-3 col-form-label">T-Score</label>
+						<label for="raw-score-a" class="col-sm-2 col-3 col-form-label">T-Score <small>(age only)</small></label>
 					</div>
+
 					<div class="form-group row">
-						<label for="raw-score-a" class="col-sm-2 col-form-label">TMT-A</label>
-						<div class="col-sm-2">
-							<input type="number" class="form-control tmt" id="raw-score-a" required>
+						<label for="raw-score-a" class="col-sm-2 col-3 col-form-label">TMT-A</label>
+						<div class="col-sm-2 col-3">
+							<input type="number" class="form-control form-control-sm tmt" id="raw-score-a" required>
 		  			</div>
-						<div class="col-sm-2">
-							<input type="text" class="form-control" id="t-score-a" readonly>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm" id="t-score-a" readonly>
 		  			</div>
 
 
 					</div>
 					<div class="form-group row">
-						<label for="raw-score-b" class="col-sm-2 col-form-label">TMT-B</label>
-						<div class="col-sm-2">
-							<input type="number" class="form-control tmt" id="raw-score-b" required>
+						<label for="raw-score-b" class="col-sm-2 col-3 col-form-label">TMT-B</label>
+						<div class="col-sm-2 col-3">
+							<input type="number" class="form-control form-control-sm tmt" id="raw-score-b" required>
 						</div>
-						<div class="col-sm-2">
-							<input type="text" class="form-control" id="t-score-b" readonly>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm" id="t-score-b" readonly>
 						</div>
-						<div class="col-sm-2">
-							<input type="text" class="form-control" id="t-score-b-age" readonly>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm" id="t-score-b-age" readonly>
 						</div>
 					</div>
 
 					<div class="form-group row">
-						<label for="tmt-b-a" class="col-sm-2 col-form-label">TMT-B - A</label>
-						<div class="col-sm-2">
-							<input type="text" class="form-control tmt" id="tmt-b-a" readonly>
+						<label for="tmt-b-a" class="col-sm-2 col-3 col-form-label">TMT-B - A</label>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm tmt" id="tmt-b-a" readonly>
 						</div>
-						<div class="col-sm-2">
-							<input type="text" class="form-control" id="t-score-b-a" readonly>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm" id="t-score-b-a" readonly>
 						</div>
-						<div class="col-sm-2">
-							<input type="text" class="form-control" id="t-score-b-a-age" readonly>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm" id="t-score-b-a-age" readonly>
 						</div>
 
 					</div>
 					<div class="form-group row">
-						<label for="tmt-b-div-a" class="col-sm-2 col-form-label">TMT-B / A</label>
-						<div class="col-sm-2">
-							<input type="text" class="form-control tmt" id="tmt-b-div-a" readonly>
+						<label for="tmt-b-div-a" class="col-sm-2 col-3 col-form-label">TMT-B / A</label>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm input-sm tmt" id="tmt-b-div-a" readonly>
 						</div>
-						<div class="col-sm-2">
-							<input type="text" class="form-control" id="t-score-b-div-a" readonly>
+						<div class="col-sm-2 col-3">
+							<input type="text" class="form-control form-control-sm" id="t-score-b-div-a" readonly>
 						</div>
 					</div>
-				</div>
+
+
 				<div class="form-group row">
-					<label for="tmt-beta" class="col-sm-2 col-form-label">TMT β</label>
-					<div class="col-sm-2">
+					<label for="tmt-beta" class="col-sm-2 col-3 col-form-label">TMT β</label>
+					<div class="col-sm-2 col-3">
 
 					</div>
-					<div class="col-sm-2">
-						<input type="text" class="form-control" id="t-score-beta" readonly>
+					<div class="col-sm-2 col-3">
+						<input type="text" class="form-control form-control-sm" id="t-score-beta" readonly>
 					</div>
-					<div class="col-sm-2">
-						<input type="text" class="form-control" id="t-score-beta-age" readonly>
+					<div class="col-sm-2 col-3">
+						<input type="text" class="form-control form-control-sm" id="t-score-beta-age" readonly>
 					</div>
 				</div>
 
 
 
-						<div class="form-group row">
-							<div class="col-sm-10">
-								<button type="submit" class="btn btn-primary">Calculate</button>
-							</div>
-						</div>
+				<div class="form-group row">
+					<div class="col-sm-10">
+						<button type="submit" class="btn btn-primary">Calculate</button>
+					</div>
+				</div>
 			</form>
 		</div>
 
@@ -144,57 +149,70 @@
 	<script type="text/javascript">
 		// Regression coefficients
 		var tmt_a = {
-			"intercept": 18.522 ,
-			"age": -0.140,
-			"SD": 2.81667,
-
+			"intercept": 19.620,
+			"age": -0.147,
+			"SD": 2.68919,
+			// raw value interval
+			"interval" : [15, 71]
 		};
 
 		var tmt_b = {
-			"intercept": 16.935  ,
-			"age": -0.136,
-			"edu": 0.152,
-			"SD":  2.63607
+			"intercept": 17.149,
+			"age": -0.141,
+			"edu": 0.162,
+			"SD":  2.61850,
+			// raw value interval
+			"interval" : [33, 166]
 		};
 
 		var tmt_b_age_only = {
-			"intercept": 19.579  ,
-			"age": -0.146,
-			"SD":  2.67989
+			"intercept": 19.928  ,
+			"age": -0.151,
+			"SD":  2.67215,
+			// raw value interval
+			"interval" : [33, 166]
 		};
 
 		var tmt_b_a = {
 			"intercept": 14.172,
-			"age": -0.092,
-			"edu": 0.167,
-			"SD":  2.82943
+			"age": -0.095,
+			"edu": 0.170,
+			"SD":  2.78347,
+			// raw value interval
+			"interval" : [-5, 131]
 		};
 
 		var tmt_b_a_age_only = {
-			"intercept": 17.079  ,
-			"age": -0.103,
-			"SD":  2.87904
+			"intercept": 17.100,
+			"age": -0.106,
+			"SD":  2.83952,
+			// raw value interval
+			"interval" : [-5, 131]
 		};
 
 		var tmt_b_div_a = {
-			"intercept": 7.711,
-			"edu": 0.134,
-			"SD":  2.94446
+			"intercept": 8.634,
+			"edu": 0.140,
+			"SD":  2.91419,
+			// raw value interval
+			"interval" : [0.899, 5.320]
 		};
 
 		var tmt_beta = {
-			"intercept": 8.892,
-			"age": -0.074,
-			"edu": 0.137,
-			"SD":  2.31819,
-			"TMT-A": 0.448
+			"intercept": 8.628,
+			"age": -0.076,
+			"edu": 0.143,
+			"TMT-A": 0.451,
+			"SD":  2.32178
+
 		};
 
 		var tmt_beta_age_only = {
-			"intercept": 11.173,
-			"age": -0.082,
-			"SD":  2.35140,
-			"TMT-A": 0.454
+			"intercept": 10.907,
+			"age": -0.084,
+			"TMT-A": 0.460,
+			"SD":  2.36890
+
 		};
 
 
@@ -205,10 +223,10 @@
 			alasql("CREATE TABLE tmt_b_a (scaled number, lower number, upper number)");
 			alasql("CREATE TABLE tmt_b_div_a (scaled number, lower number, upper number)");
 
-			alasql("INSERT INTO tmt_a VALUES(1, 72, 72),  (2, 67, 71), (3, 65, 66), (4, 59, 64), (5, 55, 58), (6, 47, 54), (7, 41, 46), (8, 40, 38), (9, 34, 37), (10, 30, 33), (11, 28, 29), (12, 27, 27), (13, 23, 25), (14, 22, 22), (15, 20, 21), (16, 18, 19), (17, 16, 17), (18, 15, 15)");
-			alasql("INSERT INTO tmt_b VALUES(2,	166, 166),(3, 160, 165),(4, 155, 159),(5, 136, 154),(6, 121, 135),(7, 108, 120),(8, 98, 107),(9, 86, 87),(10, 78, 85),(11, 71, 77),(12, 63, 70),(13, 58, 62),(14, 51, 57),(15, 46, 50),(16, 41, 45),(17, 34, 40),(18, 33	,33)");
-			alasql("INSERT INTO tmt_b_a VALUES(2,	131.2, 131.2),(3,	120.3, 131.2),(4,	105.6, 120.2),(5,	101.3, 105.5),(6,	81.4, 101.2),(7,	67.6, 81.3),(8,	58.1, 67.5),(9,	50.1, 58),(10, 43.1, 50),(11,	38.1, 43),(12,	32.1, 38),(13,	27.6, 32),(14,	23.1, 27.5),(15,	19.1, 23),(16,	10, 19),(17,	2, 9.9),(18,	-4, 1.9),(19, -4.1, -4.9),(20, -5, -5)");
-			alasql("INSERT INTO tmt_b_div_a VALUES(1, 5.32,	5.32),(2, 4.79, 5.31),(3, 4.34, 4.78),(4, 3.92, 4.33),(5, 3.55, 3.91),(6, 3.13, 3.54),(7, 2.82, 3.12),(8, 2.56, 2.81),(9, 2.34, 2.55),(10, 2.08, 2.33),(11, 1.92, 2.07),(12, 1.80, 1.91),(13, 1.62, 1.79),(14, 1.53, 1.61),(15, 1.32, 1.52),(16, 1.03, 1.31),(17, 0.90, 1.02),(18, 0.88, 0.89),(19, 0.87, 0.87)");
+			alasql("INSERT INTO tmt_a VALUES(2, 71, 71),  (3, 66, 70), (4, 64, 65), (5, 58, 63), (6, 53, 57), (7, 46, 52), (8, 40, 45), (8, 40, 38), (9, 37, 39), (10, 33, 36), (11, 29, 32), (12, 27, 28), (13, 25, 26), (14, 22, 24), (15, 21, 21), (16, 19, 20), (17, 17, 18), (18, 16, 16)");
+			alasql("INSERT INTO tmt_b VALUES(2,	166, 166),(3, 160, 165),(4, 155, 159),(5, 136, 154),(6, 121, 135),(7, 108, 120),(8, 96, 107),(9, 86, 95),(10, 78, 85),(11, 71, 77),(12, 63, 70),(13, 58, 62),(14, 51, 57),(15, 46, 50),(16, 41, 45),(17, 34, 40),(18, 33	,33)");
+			alasql("INSERT INTO tmt_b_a VALUES(2,	131, 131),(3,	120, 130),(4,	106, 119),(5,	101, 105),(6,	81, 100),(7,	68, 80),(8,	59, 67),(9,	50, 58),(10, 43, 49),(11,	38, 42),(12,	32, 37),(13,	28, 31),(14,	23, 27),(15,	19, 22),(16,	11, 18),(17,	2, 10),(18,	-4, 1),(19, -5, -5)");
+			alasql("INSERT INTO tmt_b_div_a VALUES(2, 5.320,	5.320),(3, 4.790, 5.319),(4, 4.340, 4.789),(5, 3.970, 4.339),(6, 3.580, 3.969),(7, 3.200, 3.579),(8, 2.840, 3.199),(9, 2.570, 2.839),(10, 2.340, 2.569),(11, 2.090, 2.339),(12, 1.920, 2.089),(13, 1.800, 1.919),(14, 1.620, 1.799),(15, 1.530, 1.619),(16, 1.320, 1.529),(17, 1.030, 1.319),(18, 0.900, 1.029),(19, 0.899, 0.899)");
 		} catch (e) {
 			console.log(e);
 		}
@@ -220,14 +238,22 @@
 			var scaled = null;
 			try {
 				var query = "SELECT scaled from " + table + " where lower <= " + raw + " and " + raw + " <= upper";
+				console.log(query);
 				var rs = alasql(query);
 				var scaled = rs[0].scaled;
+				console.log(scaled);
 			} catch (e) {
 				console.log(e);
 			}
 			return scaled;
 		}
 
+		function truncate(value, test) {
+			var lower = test.interval[0];
+			var upper = test.interval[1];
+			var truncated = Math.min(Math.max(value, lower), upper);
+			return truncated;
+		}
 
 
 		function calculate() {
@@ -244,12 +270,13 @@
 					// TMT-A
 					raw_a = $('#raw-score-a').val();
 					if (raw_a !== '') {
-						var range_a = Math.min(Math.max(parseInt(raw_a), 15), 72);
+						var truncated_a = truncate(parseInt(raw_a), tmt_a);//Math.min(Math.max(parseInt(raw_a), 15), 72);
+
 						// query the TMT-A look-up table and get the first (only) result
 
 
 						// Check we find the scaled value. WARN in the console otherwise
-						scaled_a = findScaled("tmt_a", range_a);
+						scaled_a = findScaled("tmt_a", truncated_a);
 						if(scaled_a !== null){
 							var predicted_scaled_a = tmt_a["intercept"] + (age * tmt_a["age"]);
 							var tmt_a_t_score = (scaled_a - predicted_scaled_a) / tmt_a["SD"] * 10 + 50;
@@ -263,9 +290,10 @@
 					// TMT-B
 					raw_b  = $('#raw-score-b').val();
 					if (raw_b !== '') {
-						var range_b = Math.min(Math.max(parseInt(raw_b), 33), 166);
+						var truncated_b = truncate(parseInt(raw_b), tmt_b);//Math.min(Math.max(parseInt(raw_b), 33), 166);
+
 						// query the TMT-B look-up table and get the first (only) result
-						scaled_b = findScaled("tmt_b", range_b);
+						scaled_b = findScaled("tmt_b", truncated_b);
 						if (scaled_b !== null) {
 							var predicted_scaled_b = tmt_b["intercept"] + (age * tmt_b["age"]) + (edu * tmt_b["edu"]);
 							var tmt_b_t_score = (scaled_b - predicted_scaled_b) / tmt_b["SD"] * 10 + 50;
@@ -283,7 +311,7 @@
 					// TMT-B - A
 					if (raw_b !== '' && raw_a !== '') {
 						var raw_b_a  = raw_b - raw_a;
-						var range_ba = Math.min(Math.max(parseInt(raw_b_a), -5), 131.2);
+						var range_ba = truncate(parseInt(raw_b_a), tmt_b_a);//Math.min(Math.max(parseInt(raw_b_a), -5), 131);
 						$('#tmt-b-a').val(raw_b_a);
 						// query the TMT-B-A look-up table and get the first (only) result
 						var scaled_ba = findScaled("tmt_b_a", range_ba);
@@ -303,11 +331,13 @@
 
 					// TMT-B / A
 					if (raw_b !== '' && raw_a !== '') {
-						var raw_b_div_a  = raw_b / raw_a;
-						var range_ba = Math.min(Math.max(parseInt(raw_b_div_a), 0.87), 5.32);
-						$('#tmt-b-div-a').val(raw_b_div_a);
+						var raw_b_div_a  = (raw_b / raw_a).toFixed(3);
+						var display = (raw_b / raw_a).toFixed(2);
+						var truncated = truncate(parseFloat(raw_b_div_a), tmt_b_a).toFixed(3);//Math.min(Math.max(parseFloat(raw_b_div_a), 0.89), 5.32).toFixed(2);
+
+						$('#tmt-b-div-a').val(display);
 						// query the TMT-B/A look-up table and get the first (only) result
-						var scaled_ba = findScaled("tmt_b_div_a", range_ba);
+						var scaled_ba = findScaled("tmt_b_div_a", truncated);
 						if (scaled_ba !== null) {
 							var predicted_scaled_b = tmt_b_div_a["intercept"]  + (edu * tmt_b_div_a["edu"]);
 							var t_score = (scaled_ba - predicted_scaled_b) / tmt_b_div_a["SD"] * 10 + 50;
